Agenda switching for work/personal context separation.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ emacs25/.emacs.d/elpa/*
 /emacs25/.emacs.d/auto-save-list/*
 /emacs25/.emacs.d/eshell/*
 /emacs25/.emacs.d/bookmarks
+/emacs25/.emacs.d/.mc-lists.el
